[gd_scene load_steps=13 format=3 uid="uid://dxtmay68ca301"]

[ext_resource type="Script" uid="uid://b1g5iaiket2lr" path="res://HUDManager.gd" id="1_8uiqn"]
[ext_resource type="Shader" uid="uid://brfe1o0lxeqv8" path="res://assets/Shaders/SpeedLines.gdshader" id="2_s7b2q"]
[ext_resource type="Texture2D" uid="uid://bsp6f7rgy5x35" path="res://assets/refs/UI_inventory.webp" id="3_bxubi"]
[ext_resource type="FontFile" uid="uid://cqipr3ixo4xi1" path="res://assets/fonts/SFPRODISPLAYTHINITALIC.OTF" id="4_8xtfn"]
[ext_resource type="Script" uid="uid://be15q7ba8qpca" path="res://UI/ui_inventory_bar.gd" id="5_1ryed"]
[ext_resource type="Script" uid="uid://fs8q3868lwkg" path="res://UI/ui_inventory_slot.gd" id="6_8s141"]
[ext_resource type="StyleBox" uid="uid://77k1s263g7pn" path="res://assets/themes/inventory_slot.tres" id="7_lr3y2"]
[ext_resource type="StyleBox" uid="uid://dj12eayb0am4x" path="res://assets/themes/selected_inventory_slot.tres" id="8_x72t0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bnpwn"]
noise_type = 3
frequency = 1.0
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_36jdj"]
noise = SubResource("FastNoiseLite_bnpwn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfvwf"]
shader = ExtResource("2_s7b2q")
shader_parameter/noise = SubResource("NoiseTexture2D_36jdj")
shader_parameter/line_color = Color(0.813258, 0.813258, 0.813258, 1)
shader_parameter/line_count = 0.4
shader_parameter/line_density = 0.0
shader_parameter/line_faloff = 0.25
shader_parameter/mask_size = 0.1
shader_parameter/mask_edge = 0.5
shader_parameter/animation_speed = 20.0

[sub_resource type="Theme" id="Theme_xfvwf"]
default_font = ExtResource("4_8xtfn")
default_font_size = 20

[node name="HUDManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8uiqn")

[node name="SpeedLines" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xfvwf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bxubi")
expand_mode = 1

[node name="HUD" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="CrossHair" type="TextureRect" parent="HUD"]
layout_mode = 2

[node name="GameTime" type="Label" parent="HUD"]
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_xfvwf")
text = "00:00"
horizontal_alignment = 1

[node name="GrabLabel" type="Label" parent="HUD"]
visible = false
layout_mode = 2
text = "Grabbed Nothing"

[node name="InventoryBar" type="MarginContainer" parent="HUD"]
layout_mode = 2
theme_override_constants/margin_bottom = 40
script = ExtResource("5_1ryed")

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/InventoryBar"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Control" type="Control" parent="HUD/InventoryBar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="HUD/InventoryBar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2"]
custom_minimum_size = Vector2(512, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -32.0
offset_right = 270.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1

[node name="Slot" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "1"

[node name="Slot2" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "2"

[node name="Slot3" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "3"

[node name="Slot4" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot4/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "4"

[node name="Slot5" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot5/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "5"

[node name="Slot6" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot6/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "6"

[node name="Slot7" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot7/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "7"

[node name="Slot8" type="Panel" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
script = ExtResource("6_8s141")
normal_style = ExtResource("7_lr3y2")
selected_style = ExtResource("8_x72t0")

[node name="MarginContainer" type="MarginContainer" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control2/HBoxContainer/Slot8/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.53013366, 0.7923846, 1, 1)
text = "8"

[node name="Control3" type="Control" parent="HUD/InventoryBar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardBalance" type="Label" parent="HUD/InventoryBar/HBoxContainer2/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_colors/font_color = Color(6.016344e-06, 0.7325938, 0.17049712, 1)
theme_override_font_sizes/font_size = 30
text = "$1155"
vertical_alignment = 1
